--- a/package.json
+++ b/package.json
@@ -11,30 +11,40 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.5",
+    "@prisma/client": "6.5.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
-    "lucide-react": "^0.479.0",
-    "next": "15.2.2",
+    "lucide-react": "^0.483.0",
+    "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.22.0",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "15.2.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2",
