--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.6",
+    "@clerk/nextjs": "^6.12.10",
+    "@liveblocks/client": "^2.22.1",
+    "@liveblocks/react": "^2.22.1",
+    "@liveblocks/react-tiptap": "^2.22.1",
+    "@liveblocks/react-ui": "^2.22.1",
     "@prisma/client": "6.5.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -25,9 +30,10 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
-    "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "lucide-react": "^0.484.0",
+    "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -37,17 +43,17 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4.0.14",
-    "@types/node": "^22.13.10",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
+    "@tailwindcss/postcss": "^4.0.16",
+    "@types/node": "^22.13.13",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "15.2.3",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "15.2.4",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.16",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.28.0"
   }
 }
