--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.10",
+    "@clerk/themes": "^2.2.24",
     "@liveblocks/client": "^2.22.1",
+    "@liveblocks/node": "^2.22.1",
     "@liveblocks/react": "^2.22.1",
     "@liveblocks/react-tiptap": "^2.22.1",
     "@liveblocks/react-ui": "^2.22.1",
@@ -45,14 +47,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
-    "@tailwindcss/postcss": "^4.0.16",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^22.13.13",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.16",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   }
