--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "WillLuke.nextjs.addTypesOnSave": true,
   "WillLuke.nextjs.hasPrompted": true,
   "postman.settings.dotenv-detection-notification-visibility": false,
-  "cSpell.ignoreWords": ["Nuqs", "liveblocks"]
+  "cSpell.ignoreWords": ["Nuqs", "collab", "liveblocks"]
 }
