Added web analytics

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/react": "^1.2.2",
-    "@clerk/nextjs": "^6.12.10",
-    "@clerk/themes": "^2.2.24",
+    "@clerk/nextjs": "^6.12.11",
+    "@clerk/themes": "^2.2.25",
     "@liveblocks/client": "^2.22.1",
     "@liveblocks/node": "^2.22.1",
     "@liveblocks/react": "^2.22.1",
@@ -33,7 +33,8 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
-    "ai": "^4.2.5",
+    "@vercel/analytics": "^1.5.0",
+    "ai": "^4.2.6",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
