--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
   "WillLuke.nextjs.addTypesOnSave": true,
   "WillLuke.nextjs.hasPrompted": true,
   "postman.settings.dotenv-detection-notification-visibility": false,
-  "cSpell.ignoreWords": ["Agentic", "Nuqs", "collab", "favorited", "liveblocks"]
+  "cSpell.ignoreWords": ["Agentic", "Nuqs", "collab", "favorited", "favoriting", "heirarchy", "liveblocks", "shadcn"]
 }
